--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -90,6 +90,7 @@ a:hover {
 }
 
 /* Film grain effect */
+/* Film grain effect */
 .film-grain {
   position: relative;
 }
@@ -101,7 +102,10 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/images/grain.png');
+  /* Use an SVG noise pattern instead of an external image */
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
   opacity: 0.05;
   pointer-events: none;
 }
+
+
